# Deltas_Chess

./: BoardDisplay.cpp  BoardDisplay.h  CMakeLists.txt  ChessPieces.qrc  DeltasChess.pro  GUI.cpp  GUI.h  LICENSE  LICENSE.txt  README.md  board.cpp  board.h  board_operator.cpp  board_operator.h  chess_game.cpp  chess_game.h  chess_game_interface.h  chess_macros.h  code_utils.h  code_utils.inc  controller.cpp  controller.h  game_record.cpp  game_record.h  game_status.cpp  game_status.h  gui sample.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  move_factory.cpp  move_factory.h  moves.cpp  moves.h  new_board.cpp  new_board.h  new_chess_game.cpp  new_chess_game.h  pieces.cpp  (+5 more)
SDL2_ttf/include/: SDL_ttf.h
